--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="C:\Users\HP\Desktop\web development\HTML-personal site\afshanhamid.PNG" alt="afshan's profile picture">
+        <img src="C:\Users\HP\Desktop\web development\HTML-personal site\images\afshanhamid.PNG" alt="afshan's profile picture">
       </td>
       <td>
         <h1>Peerzadi Afshan Hamid</h1>
