--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="HTML-personal site\images\afshanhamid.PNG" alt="afshan's profile picture">
+        <img src=images\afshanhamid.PNG" alt="afshan's profile picture" "style="640×320px">
       </td>
       <td>
         <h1>Peerzadi Afshan Hamid</h1>
